# lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  logging.h  run.sh  tmp.txt
base/: logging.cpp  logging.h  util.h
main/: error.h  main.cpp
parse/: ast.cpp  ast.h  lex.cpp  lex.h  location.h  parse.cpp  parse.h  token.cpp  token.h
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  emit.cpp  emit.h  error.h  lex.cpp  lex.h  location.h  main.cpp  parse.cpp  parse.h  token.cpp  token.h  type.cpp  type.h  typecheck.cpp  typecheck.h  util.cpp  util.h  visit.cpp  visit.h
test/: fn.txt  lex.txt
typecheck/: types.h
